Change cron time [no ci]
The cron update sorta coincides with when people tend to go online causing trouble with updates so let's move it a bit earlier when not as many people tend to go online.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "30 16 * * *"
+    - cron: "07 11 * * *" # 11am GMT / 4am PT
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
